# dyvm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: dfa.cpp  dfa.hpp  expression_calculator.cpp  expression_calculator.hpp  file_stream.cpp  file_stream.hpp  lex.cpp  lex.hpp  nfa.cpp  nfa.hpp  parser.cpp  parser.hpp
test/: left_recursive.json  lex.json  lr0.json  regex_input.txt  syntax_rules.json  test_input.txt
